fix/fix java compiler version